[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Fxs" type="Button" parent="."]
margin_left = 69.0
margin_top = 31.0
margin_right = 284.0
margin_bottom = 77.0
text = "Exportar Fxs"

[node name="Cuerpos" type="Button" parent="."]
margin_left = 377.0
margin_top = 423.0
margin_right = 564.0
margin_bottom = 484.0
text = "Exportar Cuerpos"

[node name="cabezas" type="Button" parent="."]
margin_left = 372.0
margin_top = 272.0
margin_right = 564.0
margin_bottom = 349.0
text = "cabezas"

[node name="cascos" type="Button" parent="."]
margin_left = 358.0
margin_top = 172.0
margin_right = 550.0
margin_bottom = 249.0
text = "cascos"

[node name="armas" type="Button" parent="."]
margin_left = 112.0
margin_top = 370.0
margin_right = 304.0
margin_bottom = 447.0
text = "armas"

[node name="escudos" type="Button" parent="."]
margin_left = 645.0
margin_top = 385.0
margin_right = 837.0
margin_bottom = 462.0
text = "escudos"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 205, 149 )

[connection signal="pressed" from="Fxs" to="." method="_on_Fxs_pressed"]
[connection signal="pressed" from="Cuerpos" to="." method="_on_Cuerpos_pressed"]
[connection signal="pressed" from="cabezas" to="." method="_on_cabezas_pressed"]
[connection signal="pressed" from="cascos" to="." method="_on_cascos_pressed"]
[connection signal="pressed" from="armas" to="." method="_on_armas_pressed"]
[connection signal="pressed" from="escudos" to="." method="_on_escudos_pressed"]
